--- a/Electric_Field/Electric_Field.tex
+++ b/Electric_Field/Electric_Field.tex
@@ -85,31 +85,27 @@
 The electric field vector, $\bfvec{E}$, is a quantity assigned to a point in space. Given this quantity, we can compute the force on a charge $Q$ will experience if it is placed at that point using the equation $\bfvec{F}=Q\bfvec{E}$. The direction of $\bfvec{E}$ is also the direction a charge will begin to move if released from rest.
 
 To find $\bfvec{E}$ at any point in space, 
-compute the force $\bfvec{F}$ due to all other charges on a hypothetical (or ``test") charge $q$o$ at a point where you want to know $\bfvec{E}$. To find $\bfvec{E}$ at that point, divide $\bfvec{F}$ by $q$o$.
+compute the force $\bfvec{F}$ due to all other charges on a hypothetical (or ``test") charge $q$o$ that has an infinitesimal charge and size at a point where you want to know $\bfvec{E}$. To find $\bfvec{E}$ at that point, divide $\bfvec{F}$ by $q$o$.
 
-$$\bfvec{E} = \frac{\bfvec{F}}{q$o}$$
+$$\bfvec{E}${\text{due to }q} = \frac{\bfvec{F}${q\text{ on }q$o}}{q$o}$$
 
 %To find $\bfvec{F}$ when a different charge $Q$ is placed where $q$ was, multiply $\bfvec{E}$ by $Q$.
 
 \section{Example I}
 
-Charge $q$1$ is at $(x,y)=(-a,-a)$. Find the electric field at $(x,y)=(a,a)$ in the form $\bfvec{E}=E$x\ihat + E$y\jhat$. Also, find $E$. (Note that $E$ and $|\bfvec{E}|$ are used interchangebly.)
+A positive charge $q$1$ is at $(x,y)=(-a,-a)$. Find the electric field at $(x,y)=(a,a)$ in the form $\bfvec{E}=E$x\ihat + E$y\jhat$. Also, find $E$. (Note that $E$ and $|\bfvec{E}|$ are used interchangeably.)
 
 \textbf{Solution}
 
-To find the electric field at a point in space, we put a hypothetical ``test" charge $q$o$ at that point, compute the force on it due to all other charges, and then use
+To find the electric field at a point in space, we put a hypothetical and positive ``test" charge $q$o$ at that point, compute the force on it due to all other charges, and then use
 
 $$\bfvec{E} = \frac{\bfvec{F}}{q$o}$$
 
-The force a positive charge $q$1$ at $(x,y)=(-a,-a)$ exerts on a positive charge $q$2$ at $(x,y)=(a, a)$ was computed in a previous activity.
+The force a positive charge $q$1$ at $(x,y)=(-a,-a)$ exerts on a positive charge $q$2$ at $(x,y)=(a, a)$ was computed in a previous activity. The result was
 
 $$\bfvec{F}${q$1\text{ on } q$2}=k\frac{|q$1q$2|}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat)$$
 
-We also found that this equation applies when $q$1$ and $q$2$ are both positive or both are negative. If $q$1$ was positive and $q$2$ was negative, or vice-versa, we found the sign changed:
-
-$$\bfvec{F}${q$1\text{ on } q$2}=-k\frac{|q$1q$2|}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat)$$
-
-Based on this, we can write a single equation for all possibilities:
+Because both charges are positive, we can drop the absolute value in the above equation, giving
 
 $$\bfvec{F}${q$1\text{ on } q$2}=k\frac{q$1q$2}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat)$$
 
@@ -123,11 +119,13 @@ $\ds\bfvec{E}${\text{at }(a,a) \text{ due to }q$1} = \frac{\bfvec{F}}{q$o} = \fr
 
 where the fact that $\sin 45^\circ=\cos 45^\circ=1/\sqrt{2}$ was used. The magnitude is $E=\sqrt{E$x^2+E$y^2}=k|q$1|/8a^2$.
 
-Sign check: When computing electric fields and forces, it is easy to make a sign error. The electric field vector points in the direction a positive charge will move if released there from rest. Suppose $q$1$ is positive. Our equation predicts that a positive charge released from rest at $(a, a)$ will move up and to the right. Suppose $q$1$ is negative. Our equation predicts that a positive charge will move down and to the left. This is consistent with the fact that like charges repel and unlike charges attract.
+Sign check: When computing electric fields and forces, it is easy to make a sign error. The electric field vector points in the direction a positive charge will move if released there from rest. $q$1$ was given to be positive. Our equation predicts that a positive charge released from rest at $(a, a)$ will move up and to the right. Suppose $q$1$ is negative. Our equation predicts that a positive charge will move down and to the left. This is consistent with the fact that like charges repel and unlike charges attract. (Note that we only derived the equation for $\bfvec{E}$ when $q$1$ was positive, but it turns out that the equation we arrive at is correct when $q$1$ is negative.)
+
+Follow-up question: In the above, the equation $E=\sqrt{E$x^2+E$y^2}=k|q$1|/8a^2$ was given. Where did the absolute value on $q$1$ come from?
 
 \section{Problem I}
 
-Charge $q$1$ is at $(x,y)=(-a,a)$. At $(x,y)=(a, 0)$, find $\bfvec{E}$ in the form $\bfvec{E}=E$x\ihat + E$y\jhat$. Check signs of the components of $\bfvec{E}$ using the technique used in Example I. Also, find $E$.
+A positive charge $q$1$ is at $(x,y)=(-a,a)$. At $(x,y)=(a, 0)$, find $\bfvec{E}$ in the form $\bfvec{E}=E$x\ihat + E$y\jhat$. Check signs of the components of $\bfvec{E}$ using the technique used in Example I. Also, find $E$.
 
 \input{../Electric_Force/figures/grid.tikz}
 
@@ -143,20 +141,30 @@ Replacing $q$2$ with a test charge $q$o$,
 $$\bfvec{F}${q$1\text{ on } q$o}=k\frac{q$1q$o}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)$$
 
 $\ds\bfvec{E}${\text{at }(a,0) \text{ due to }q$1} = \frac{\bfvec{F}}{q$o}=\frac{kq$1}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)$
+
+$E = k|q$1|/5a^2$
 \fi
 
 \newpage
 
 \section{Problem II}
 
-Charge $q$1$ is at $(x,y)=(-a,a)$. Find the electric field at $(x,y)=(a, 0)$, find $\bfvec{E}$ in the form $\bfvec{E}=E$x\ihat + E$y\jhat$. Check signs of the components of $\bfvec{E}$ using the technique used in Example I. Also, find $E$.
+To find the electric field at a point in space in Example I and Problem I, we first computed the force on a charge at that point and then divided the result by the charge.
+
+An alternative approach is to start with the equation for the magnitude of the elctric field due to a charge $q$ at a point that is a distance $r$ from the charge:
+
+$E${\text{due to }q}=k{|q|}/{r^2}$
+
+Charge $q$1$ is at $(x,y)=(a, a)$. Find the magnitude of the electric field at $(x,y)=(0, 0)$ using the above formula and then find $\bfvec{E}$ in the form $\bfvec{E}=E$x\ihat + E$y\jhat$.
 
 \input{../Electric_Force/figures/grid.tikz}
 
 \ifsolutions
 {\bf Answer}:
 
-$\ds\bfvec{E}${\text{at }(a,0) \text{ due to }q$1}=\frac{kq$1}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)$, which matches the solution to Problem I, as expected.
+$E = kq/2a^2$
+
+$\ds\bfvec{E}${\text{at }(0,0) \text{ due to }q$1}=-\frac{kq$1}{2a^2}\left(\frac{1}{\sqrt{2}}\ihat +\frac{1}{\sqrt{2}}\jhat\right)$
 \fi
 
 \end{document}
