--- a/rhat/rhat.tex
+++ b/rhat/rhat.tex
@@ -82,13 +82,32 @@
 
 \section{The $\rhat$ Unit Vector}
 
-Previously, when computing the electric force between two charges, you used the formula $E=k{|q|}/{r^2}$ to find the electric field and then used a diagram to write $\bfvec{E}$ in the form $\bfvec{E}=E$x\ihat + E$y\jhat$.
+One approach to finding the electric force between two charges is to use
+$F=k{|q$1q$2|}/{r^2}$ to find the magnitude and a diagram to write $\bfvec{F}$ in the form $\bfvec{F}=F$x\ihat + F$y\jhat$.
 
-An alternative, and more direct, approach is to use an equation for electric field using a unit vector $\rhat$:
+An alternative, and more direct, approach is to use an equation for electric force using a unit vector $\rhat$:
 
-$$\bfvec{E}${\text{due to }q}=kq\frac{\rhat}{r^2}\thinspace,$$
+$$\bfvec{F}${q$1\text{ on }q$2}=kq$1q$2\frac{\rhat}{r^2}$$
 
-where $\rhat$ is the unit vector that points from the position of $q$1$ to the point in space where we want to know $\bfvec{E}$, and $r$ is the distance between $q$1$ and that point. Note that in this equation, we use $q$ and not $|q|$.
+where $\rhat$ is the unit vector that points from the position of $q$1$ to the position of $q$2$, and $r$ is the distance between $q$1$ and $q$2$.
+
+To find $\rhat$, 
+
+\begin{enumerate}
+
+  \item draw a vector, $\bfvec{r}$, from $q$1$ to $q$2$;
+
+  \item Write $\bfvec{r}$ in the form $\bfvec{r}=r$x\ihat+r$y\jhat$; then
+
+  \item $\rhat=\bfvec{r}/r$, where $r=\sqrt{r$x^2+r$y^2}$.
+
+\end{enumerate}
+
+Similarly, the equation for electric field using a unit vector $\rhat$ is
+
+$$\bfvec{E}${\text{due to }q}=kq\frac{\rhat}{r^2}$$
+
+where $\rhat$ is the unit vector that points from the position of $q$1$ to the point in space where we want to know $\bfvec{E}$, and $r$ is the distance between $q$1$ and that point. 
 
 To find $\rhat$, 
 
@@ -102,9 +121,21 @@ To find $\rhat$,
 
 \end{enumerate}
 
-\section{Example}
+Note that in the equations for $\bfvec{F}$ and $\bfvec{E}$, we do not need to take the absolute value of the charges.
 
-If $q$1$ is at $(x,y)=(-a,-a)$, find the electric field at $(x,y)=(a,a)$ using $\bfvec{E}${\text{due to }q$1}=kq$1{\rhat}/{r^2}$. Also, find $E$.
+\section{Example I}
+
+Charge $q$1$ is at $(x,y)=(-a,-a)$ and charge $q$2$ is at $(a, a)$. Find
+
+\begin{enumerate}
+
+  \item $\rhat$
+
+  \item $\bfvec{F}${q$1\text{ on }q$2}$
+
+  \item $F${q$1\text{ on }q$2}$
+
+\end{enumerate}
 
 \textbf{Solution}
 
@@ -114,9 +145,49 @@ The calculation of $\rhat$ is shown in the following diagram.
 
 Substitution gives
 
-$$\bfvec{E}${\text{at }(a,a)\text{ due to }q$1}=kq$1\frac{1}{r^2}\rhat = kq$1\frac{1}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat) =\frac{kq$1}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]\thinspace,$$
+$$\bfvec{F}${q$1\text{ on }q$2}=kq$1q$2\frac{\rhat}{r^2} = \frac{kq$1q$2}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat) =\frac{kq$1q$2}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]$$
 
-which is the same result obtained in the previous example, as expected.
+Check: if $q$1$ and $q$2$ are both positive, the force on $q$2$ is upwards and to the right, as expected.
+
+\section{Problem I}
+
+Charge $q$1$ is at $(x,y)=(-a,a)$ and charge $q$2$ is at $(a, 0)$. Find
+
+\begin{enumerate}
+
+  \item $\rhat$
+
+  \item $\bfvec{F}${q$1\text{ on }q$2}$
+
+  \item $F${q$1\text{ on }q$2}$
+
+\end{enumerate}
+
+\section{Example II}
+
+If $q$1$ is at $(x,y)=(-a,-a)$, find 
+
+\begin{enumerate}
+
+  \item $\rhat$
+
+  \item $\bfvec{E}${\text{at }(a,a)\text{ due to }q$1}$
+
+  \item $E${\text{at }(a,a)\text{ due to }q$1}$
+
+\end{enumerate}
+
+\textbf{Solution}
+
+The calculation of $\rhat$ is shown in the following diagram.
+
+\input{figures/Two_Charges.tikz?1691615317836}
+
+Substitution gives
+
+$$\bfvec{E}${\text{at }(a,a)\text{ due to }q$1}=kq$1\frac{\rhat}{r^2} = kq$1\frac{1}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat) =\frac{kq$1}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]$$
+
+Check: If a positive charge was placed at $(x,y)=(a,a)$, it would tend to move up and to the right, which is consitent with the signs on the components of the electric field found above.
 
 To calculate $|\bfvec{E}|$, we can use
 
@@ -130,11 +201,21 @@ $\quad\ds|\bfvec{E}|=k|q$1|\frac{|\rhat|}{r^2}$.
 
 The magnitude of a unit vector is $1$, so
 
-$\ds|\bfvec{E}|=k|q$1|\frac{1}{r^2}=\frac{k|q$1|}{8a^2},\thickspace$ as before.
+$\ds|\bfvec{E}|=k|q$1|\frac{1}{r^2}=\frac{k|q$1|}{8a^2}$.
 
-\section{Problem}
+\section{Problem II}
 
-Charge $q$1$ is at $(x,y)=(-a,a)$. Find the electric field at $(x,y)=(a, 0)$ using $\bfvec{E}${\text{at }(a,0)\text{ due to }q$1}=kq$1{\rhat}/{r^2}$. Check signs of the components of $\bfvec{E}$ using the technique used in the Example. Also, find $|\bfvec{E}|$.
+If $q$1$ is at $(x,y)=(-a,a)$, find 
+
+\begin{enumerate}
+
+  \item $\rhat$
+
+  \item $\bfvec{E}${\text{at }(a,0)\text{ due to }q$1}$
+
+  \item $E${\text{at }(a,0)\text{ due to }q$1}$
+
+\end{enumerate}
 
 \input{../Electric_Force/figures/grid.tikz}
 
@@ -142,15 +223,11 @@ Charge $q$1$ is at $(x,y)=(-a,a)$. Find the electric field at $(x,y)=(a, 0)$ usi
 {\bf Answer}:
 
 $\bfvec{r}=2a\ihat-a\jhat$,
+$\quad$ $r=\sqrt{5}a$
 $\quad$
 $\ds\rhat=\frac{2}{\sqrt{5}}\ihat-\frac{1}{\sqrt{5}}\jhat$,
-$\quad$ $r^2=5a^2$
 
-$\ds\bfvec{E}${\text{at }(a,0) \text{ due to }q$1}=\frac{kq$1}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)$, which matches the solution to Problem I, as expected.
+$\ds\bfvec{E}${\text{at }(a,0) \text{ due to }q$1}=\frac{kq$1}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)$.
 \fi
-
-\section{Question}
-
-Can you solve an Electric Force (Coulomb's Law) problem using $\rhat$ notation? If yes, what is the equation for the electric force using $\rhat$?
 
 \end{document}
