--- a/Electric_Force/Electric_Force.tex
+++ b/Electric_Force/Electric_Force.tex
@@ -84,27 +84,27 @@
 
 \emph{Magnitude}
 
-$$F${1\mbox{ on } 2}=F${2\mbox{ on } 1}=k\frac{|q$1q$2|}{r^2}$$
+$$F_{1\mbox{ on } 2}=F_{2\mbox{ on } 1}=k\frac{|q_1q_2|}{r^2}$$
 
-where $r$ is the distance between $q$1$ and $q$2$. To simplify notation, we are using $k$ in place of $1/4\pi\epsilon$o$. Note that by definition, the magnitude of a vector is positive, which is the reason for the use of the absolute value.
+where $r$ is the distance between $q_1$ and $q_2$. To simplify notation, we are using $k$ in place of $1/4\pi\epsilon_o$. Note that by definition, the magnitude of a vector is positive, which is the reason for the use of the absolute value.
 
-\emph{Direction}: Along line that connects $q$1$ and $q$2$. Direction depends on signs of $q$1$ and $q$2$. (Likes repel, opposites attract.).
+\emph{Direction}: Along line that connects $q_1$ and $q_2$. Direction depends on signs of $q_1$ and $q_2$. (Likes repel, opposites attract.).
 
 \section{Example}
 
-Charge $q$1$ is at $(x,y)=(-a,-a)$ and charge $q$2$ is at $(a, a)$. Both charges have a charge of $q$.
+Charge $q_1$ is at $(x,y)=(-a,-a)$ and charge $q_2$ is at $(a, a)$. Both charges have a charge of $q$.
 
 \begin{enumerate}
 
-  \item Find the magnitude of the force of $q$1$ on $q$2$.
+  \item Find the magnitude of the force of $q_1$ on $q_2$.
 
-  \item Find the direction of the force of $q$1$ on $q$2$ in terms of an angle with respect to the $+x$--axis with counterclockwise positive.
+  \item Find the direction of the force of $q_1$ on $q_2$ in terms of an angle with respect to the $+x$--axis with counterclockwise positive.
 
-  \item Write the force of $q$1$ on $q$2$ in the form $\bfvec{F}=F$x\ihat + F$y\jhat$.
+  \item Write the force of $q_1$ on $q_2$ in the form $\bfvec{F}=F_x\ihat + F_y\jhat$.
 
-  \item If $q$1=q$ and $q$2=-q$, how will your answers to 1.--3. change?
+  \item If $q_1=q$ and $q_2=-q$, how will your answers to 1.--3. change?
 
-  \item If $q$1=-q$ and $q$2=-q$, how will your answers to 1.--3. change?
+  \item If $q_1=-q$ and $q_2=-q$, how will your answers to 1.--3. change?
 
 \end{enumerate}
 
@@ -114,13 +114,13 @@ Charge $q$1$ is at $(x,y)=(-a,-a)$ and charge $q$2$ is at $(a, a)$. Both charges
 
   \item The distance between the charges is $r=\sqrt{(2a)^2+(2a)^2}=\sqrt{8a^2}$, so
 
-        $$F${1\mbox{ on } 2}=k\frac{|q$1q$2|}{r^2}=\frac{k|qq|}{(\sqrt{8a^2})^2}=\frac{kq^2}{8a^2}$$
+        $$F_{1\mbox{ on } 2}=k\frac{|q_1q_2|}{r^2}=\frac{k|qq|}{(\sqrt{8a^2})^2}=\frac{kq^2}{8a^2}$$
 
-  \item The charges will repel each other, so the direction of forces of one on the other will be as shown in the left part of the following diagram. The angle of $F${1\mbox{ on } 2}$ is $+45^\circ$ with respect to the $+x$--axis with counterclockwise positive.
+  \item The charges will repel each other, so the direction of forces of one on the other will be as shown in the left part of the following diagram. The angle of $F_{1\mbox{ on } 2}$ is $+45^\circ$ with respect to the $+x$--axis with counterclockwise positive.
 
         \input{figures/Two_Charges-a.tikz}
 
-  \item Let $F = F${1\mbox{ on } 2}$ from part 1. to simplify notation. The right part of the above diagram shows the calculation of the components $F$x$ and $F$y$, from which it follows that $\bfvec{F} = F\cos 45^\circ \ihat + F\sin 45^\circ \jhat$.
+  \item Let $F = F_{1\mbox{ on } 2}$ from part 1. to simplify notation. The right part of the above diagram shows the calculation of the components $F_x$ and $F_y$, from which it follows that $\bfvec{F} = F\cos 45^\circ \ihat + F\sin 45^\circ \jhat$.
 
   \item 
 
@@ -130,21 +130,21 @@ Charge $q$1$ is at $(x,y)=(-a,-a)$ and charge $q$2$ is at $(a, a)$. Both charges
 
         p2
 
-        The force vectors will reverse direction as shown on the left in the following diagram. The angle of $F${1\mbox{ on } 2}$ is $225^\circ$ with respect to the $+x$ axis with counterclockwise positive.
+        The force vectors will reverse direction as shown on the left in the following diagram. The angle of $F_{1\mbox{ on } 2}$ is $225^\circ$ with respect to the $+x$ axis with counterclockwise positive.
 
         p3.
 
         When the angle $\theta$ of a vector $\bfvec{V}$ is given with respect to $+x$--axis, it can be written in component form without using a diagram using the formula $\bfvec{V} = V\cos\theta\ihat + V\sin\theta\jhat$. Thus,
 
-        $\bfvec{F}${1\mbox{ on } 2} = F\cos 225^\circ \ihat + F\sin 225^\circ \jhat$.
+        $\bfvec{F}_{1\mbox{ on } 2} = F\cos 225^\circ \ihat + F\sin 225^\circ \jhat$.
 
-        Alternatively, the diagram on the right of the following figure shows the calculation of $\bfvec{F}${1\mbox{ on } 2}$ using a different angle and manually inserting the signs of the components based on the diagram. The result is
+        Alternatively, the diagram on the right of the following figure shows the calculation of $\bfvec{F}_{1\mbox{ on } 2}$ using a different angle and manually inserting the signs of the components based on the diagram. The result is
 
-        $\bfvec{F}${1\mbox{ on } 2} = -F\cos 45^\circ \ihat - F\sin 45^\circ \jhat$.
+        $\bfvec{F}_{1\mbox{ on } 2} = -F\cos 45^\circ \ihat - F\sin 45^\circ \jhat$.
 
         These two answers are identical (what trig identity can be used to show this?).
 
-        Comparing $\bfvec{F}${1\mbox{ on } 2} = -F\cos 45^\circ \ihat - F\sin 45^\circ \jhat$ with the answer for part 3. of the original problem, we see that to reverse the direction of a vector, we can multiply each of its components by $-1$.
+        Comparing $\bfvec{F}_{1\mbox{ on } 2} = -F\cos 45^\circ \ihat - F\sin 45^\circ \jhat$ with the answer for part 3. of the original problem, we see that to reverse the direction of a vector, we can multiply each of its components by $-1$.
 
         \input{figures/Two_Charges-b.tikz}
 
@@ -158,19 +158,19 @@ Charge $q$1$ is at $(x,y)=(-a,-a)$ and charge $q$2$ is at $(a, a)$. Both charges
 
 \section{Problem I}
 
-Charge $q$1$ is at $(x,y)=(-a,a)$ and charge $q$2$ is at $(a, -a)$. Both charges have a charge of $q$. Draw this charge configuration and then using the steps in the previous example,
+Charge $q_1$ is at $(x,y)=(-a,a)$ and charge $q_2$ is at $(a, -a)$. Both charges have a charge of $q$. Draw this charge configuration and then using the steps in the previous example,
 
 \begin{enumerate}
 
-  \item Find the magnitude of the force of $q$1$ on $q$2$.
+  \item Find the magnitude of the force of $q_1$ on $q_2$.
 
-  \item Find the direction of the force of $q$1$ on $q$2$ in terms of an angle with respect to the $+x$--axis with counterclockwise positive.
+  \item Find the direction of the force of $q_1$ on $q_2$ in terms of an angle with respect to the $+x$--axis with counterclockwise positive.
 
-  \item Write the force of $q$1$ on $q$2$ in the form $\bfvec{F}=F$x\ihat + F$y\jhat$.
+  \item Write the force of $q_1$ on $q_2$ in the form $\bfvec{F}=F_x\ihat + F_y\jhat$.
 
-  \item If $q$1=q$ and $q$2=-q$, how will your answers to 1. and 2. change?
+  \item If $q_1=q$ and $q_2=-q$, how will your answers to 1. and 2. change?
 
-  \item If $q$1=-q$ and $q$2=-q$, how will your answers to 1.--3. change?
+  \item If $q_1=-q$ and $q_2=-q$, how will your answers to 1.--3. change?
 
 \end{enumerate}
 
@@ -179,26 +179,26 @@ Charge $q$1$ is at $(x,y)=(-a,a)$ and charge $q$2$ is at $(a, -a)$. Both charges
 
     \begin{enumerate}
 
-      \item $\ds F${1\mbox{ on } 2}=k\frac{|q$1q$2|}{r^2}=\frac{k|qq|}{(\sqrt{8a^2})^2}=\frac{kq^2}{8a^2}$
+      \item $\ds F_{1\mbox{ on } 2}=k\frac{|q_1q_2|}{r^2}=\frac{k|qq|}{(\sqrt{8a^2})^2}=\frac{kq^2}{8a^2}$
 
       \item $315^\circ$ (or $-45^\circ$)
 
-      \item $\bfvec{F}${1\mbox{ on } 2} = F${1\mbox{ on } 2}(\cos 315^\circ \ihat + \sin 315^\circ \jhat)$
+      \item $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(\cos 315^\circ \ihat + \sin 315^\circ \jhat)$
 
             or
 
-            $\bfvec{F}${1\mbox{ on } 2} = F${1\mbox{ on } 2}(\cos 45^\circ \ihat - \sin 45^\circ \jhat)$
+            $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(\cos 45^\circ \ihat - \sin 45^\circ \jhat)$
 
       \item p1. No change.
 
             p2. $+135^\circ$
 
                 p3. 
-                   $\bfvec{F}${1\mbox{ on } 2} = F${1\mbox{ on } 2}(\cos 135^\circ \ihat + \sin 135^\circ \jhat)$
+                   $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(\cos 135^\circ \ihat + \sin 135^\circ \jhat)$
 
             or
 
-            $\bfvec{F}${1\mbox{ on } 2} = F${1\mbox{ on } 2}(-\cos 45^\circ \ihat + \sin 45^\circ \jhat)$
+            $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(-\cos 45^\circ \ihat + \sin 45^\circ \jhat)$
 
       \item Answers to 1.--3. are the same.
 
@@ -212,7 +212,7 @@ Charge $q$1$ is at $(x,y)=(-a,a)$ and charge $q$2$ is at $(a, -a)$. Both charges
 
 \section{Problem II}
 
-Answer the questions 1.--3. of Problem I in the previous problem for charge $q$1$ at $(x,y)=(-a,a)$ and charge $q$2$ is at $(a, 0)$.
+Answer the questions 1.--3. of Problem I in the previous problem for charge $q_1$ at $(x,y)=(-a,a)$ and charge $q_2$ is at $(a, 0)$.
 
 \ifsolutions
 {\bf Solution}
@@ -221,12 +221,12 @@ Answer the questions 1.--3. of Problem I in the previous problem for charge $q$1
 
     \begin{enumerate}
 
-      \item $\ds F${1\mbox{ on } 2}=k\frac{|q$1q$2|}{r^2}=\frac{k|qq|}{(\sqrt{(2a)^2+a^2})^2}=\frac{kq^2}{5a^2}$
+      \item $\ds F_{1\mbox{ on } 2}=k\frac{|q_1q_2|}{r^2}=\frac{k|qq|}{(\sqrt{(2a)^2+a^2})^2}=\frac{kq^2}{5a^2}$
 
-      \item $\bfvec{F}${1\mbox{ on } 2} = F${1\mbox{ on } 2}(\sin \theta \ihat - \cos \theta\jhat)$, where $\theta=\tan^{-1}(2) = 63.4^\circ$.
+      \item $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(\sin \theta \ihat - \cos \theta\jhat)$, where $\theta=\tan^{-1}(2) = 63.4^\circ$.
 
                 Alternatively, from the diagram on the right, $\sin\theta = 2a/\sqrt{5}a$ and $\cos\theta = 1a/\sqrt{5}a$, so 
-                $\ds\bfvec{F}${1\mbox{ on } 2} = F${1\mbox{ on } 2}\left(\frac{2}{\sqrt{5}}\ihat - \frac{1}{\sqrt{5}}\jhat\right)$.
+                $\ds\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}\left(\frac{2}{\sqrt{5}}\ihat - \frac{1}{\sqrt{5}}\jhat\right)$.
 
     \end{enumerate}
 \else
@@ -236,7 +236,7 @@ Answer the questions 1.--3. of Problem I in the previous problem for charge $q$1
 
 \section{Problem III}
 
-Answer questions 1.--3. of Problem I for charge $q$1$ is at $(x,y)=(-a,0)$ and charge $q$2$ is at $(0, 3a)$. Charge $q$1$ has a charge of $-q$. Charge $q$2$ has a charge of $+q$.
+Answer questions 1.--3. of Problem I for charge $q_1$ is at $(x,y)=(-a,0)$ and charge $q_2$ is at $(0, 3a)$. Charge $q_1$ has a charge of $-q$. Charge $q_2$ has a charge of $+q$.
 
 \ifsolutions
 {\bf Solution}
@@ -258,7 +258,7 @@ Answer questions 1.--3. of Problem I for charge $q$1$ is at $(x,y)=(-a,0)$ and c
 
             $\sin\theta = a/\sqrt{10}a$ and $\cos\theta = 3a/\sqrt{10}a$, so
 
-            $\ds\bfvec{F}${1\mbox{ on } 2} = F\left(-\frac{1}{\sqrt{10}}\ihat - \frac{3}{\sqrt{10}}\jhat\right)$
+            $\ds\bfvec{F}_{1\mbox{ on } 2} = F\left(-\frac{1}{\sqrt{10}}\ihat - \frac{3}{\sqrt{10}}\jhat\right)$
 
     \end{enumerate}
 \else
@@ -268,10 +268,10 @@ Answer questions 1.--3. of Problem I for charge $q$1$ is at $(x,y)=(-a,0)$ and c
 
 \section{Problem IV}
 
-Charge $q$1$ is at $(x,y)=(x$1,y$1)$ and charge $q$2$ is at $(x$2, y$2)$. Find the magnitude of the force of $q$1$ on $q$2$.
+Charge $q_1$ is at $(x,y)=(x_1,y_1)$ and charge $q_2$ is at $(x_2, y_2)$. Find the magnitude of the force of $q_1$ on $q_2$.
 
 \ifsolutions
-{\bf Solution}: $F=k|q$1q$2|/\left((x$2-x$1)^2 + (y$2-y$1)^2\right)$. Make sure that you can justify this with a diagram. Check to see if you can use this formula to find the magnitudes for the previous problems.
+{\bf Solution}: $F=k|q_1q_2|/\left((x_2-x_1)^2 + (y_2-y_1)^2\right)$. Make sure that you can justify this with a diagram. Check to see if you can use this formula to find the magnitudes for the previous problems.
 \fi
 
 \end{document}
